<resources>
    <string name="app_name">MathQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_count">%d / %d</string>
    <string name="quiz_score">Score: %d</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="word">Word</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="try_again">Try again!</string>

</resources>